# django_template_tr

./: Makefile  README.md  pyproject.toml
simple_blog/: settings.py  urls.py  views.py
simple_blog/articles/: urls.py  views.py
simple_blog/templates/: nav2.html  navigation.html
simple_blog/templates/articles/: index.html
tests/: test_app.py
