[tool.poetry]
name = "simple-blog"
version = "0.1.0"
description = ""
authors = ["Alexander Shangin <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "simple_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-bootstrap4 = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
